refactor schema -> expected_value becomes value_expected to align with others

--- a/views/uptime-check-details.html
+++ b/views/uptime-check-details.html
@@ -71,7 +71,7 @@
                     <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][value]'>Value:</label><div class='w3-col l4'><input class='uc-textfield uc-code' name='assumptions[{{ loop.index0 }}][value]' value='{{ assump.value }}'></div>
                 </div>
                 <div class='w3-row w3-padding-hor-4'>
-                    <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][expected_value]'>Expected Value:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][expected_value]' value='{{ assump.expected_value }}'></div>
+                    <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][value_expected]'>Expected Value:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][value_expected]' value='{{ assump.value_expected }}'></div>
                 </div>
                 
                 <div class='w3-row w3-padding-hor-4'>
@@ -92,7 +92,7 @@
                 <label class='w3-col l3' for='assumptions[{{ config.assumptions.length }}][value]'>Value:</label><div class='w3-col l4'><input class='uc-textfield uc-code' name='assumptions[{{ config.assumptions.length }}][value]' value='' placeholder='$("div.my-class").length'></div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='assumptions[{{ config.assumptions.length }}][expected_value]'>Expected Value:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ config.assumptions.length }}][expected_value]' value='' placeholder='3'></div>
+                <label class='w3-col l3' for='assumptions[{{ config.assumptions.length }}][value_expected]'>Expected Value:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ config.assumptions.length }}][value_expected]' value='' placeholder='3'></div>
             </div>
 
             <div class='w3-row w3-padding-hor-24'>
