--- a/views/uptime-checks.html
+++ b/views/uptime-checks.html
@@ -16,12 +16,12 @@
     </div>
     <@ for config in configs @>
     <div class='uc-config w3-row uc-padding-hor-10 uc-border-top' id='{{ config._id }}'>
-        <div class='w3-col l1'><a href='/uptime-checks/{{ config._id }}' class='js-config-status'><span class='uc-ion <@ if config.active @>ion-ios-stopwatch-outline w3-text-green js-config-enabled<@ else @>ion-android-hand w3-text-red js-config-disabled<@ endif @>'></span></a></div>
+        <div class='w3-col l1'><a href='/uptime-checks/{{ config._id }}' class='js-config-status'><span class='uc-ion ion-ios-timer-outline <@ if config.active @>w3-text-green js-config-enabled<@ else @>w3-text-red js-config-disabled<@ endif @>'></span></a></div>
         <div class='w3-col l4'><b><a href='/uptime-checks/{{ config._id }}'>{{ config.name }}</a></b></div>
         <div class='w3-col l2 js-config-when'><@if config.active @>every {{ config.interval }}s<@ else @>not scheduled<@ endif @></div>
         <div class='w3-col l2 js-config-last-response'>{{ config.last_response }}</div>
         <div class='w3-col l2 js-config-last-duration'>{{ config.last_duration }}</div>
-        <div class='w3-col l1'><a href='/uptime-checks/{{ config._id }}/once' class='js-config-run'><span class='uc-ion <@ if not config.active @>ion-ios-redo-outline<@ endif @>'></span></a></div>
+        <div class='w3-col l1'><a href='/uptime-checks/{{ config._id }}/once' class='js-config-run'><span class='uc-ion <@ if not config.active @>ion-ios-play-outline<@ endif @>'></span></a></div>
     </div>
     <@ endfor @>
 
