refactoring, introduce /desk as landing page

--- a/views/uptime-check-details.html
+++ b/views/uptime-check-details.html
@@ -45,7 +45,7 @@
 
             <div class='w3-row w3-padding-hor-24'>
                 <input type='submit' class='w3-border w3-small' value='Save'>
-                <a href='/uptime-checks'><button class='uc-background-none w3-small' type='button'>Go back</button></a>
+                <a href='/desk'><button class='uc-background-none w3-small' type='button'>Go back</button></a>
             </div>
         </form>
     </div>
@@ -97,7 +97,7 @@
 
             <div class='w3-row w3-padding-hor-24'>
                 <input type='submit' class='w3-border w3-small' value='Save'>
-                <a href='/uptime-checks'><button class='uc-background-none w3-small' type='button'>Go back</button></a>
+                <a href='/desk'><button class='uc-background-none w3-small' type='button'>Go back</button></a>
             </div>
         </form>
     </div>
