refactoring, /uptime-checks becomes /configurations

--- a/views/uptime-check-assumptions-details.html
+++ b/views/uptime-check-assumptions-details.html
@@ -15,7 +15,7 @@
     <div class='w3-row w3-padding-hor-8'>
         <span class='w3-col l1'><span class='uc-ion ion-ios-rainy-outline w3-text-blue'></span></span>
         <span class='w3-col l10'>{{ assump.label }}</span>
-        <span class='w3-col l1 w3-right-align'><a href='/uptime-checks/{{ config._id }}#assumptions'><span class='uc-ion ion-ios-gear-outline'></span></a></span>
+        <span class='w3-col l1 w3-right-align'><a href='/configurations/{{ config._id }}#assumptions'><span class='uc-ion ion-ios-gear-outline'></span></a></span>
     </div>
 
     <div class='w3-row w3-padding-hor-4 w3-pale-red w3-padding-small' style='margin-left: 54px'>
