--- a/views/uptime-check-create.html
+++ b/views/uptime-check-create.html
@@ -6,7 +6,7 @@
 
 <@ block content @>
 
-    <form action='/uptime-checks' method='POST' enctype='application/json'>
+    <form action='/configurations' method='POST' enctype='application/json'>
         <div class='w3-row w3-padding-hor-4'>
             <div class='w3-col l2'>Name:</div><div class='w3-col l4'><input class='uc-textfield' name='name' value=''></div>
         </div>
@@ -25,7 +25,7 @@
 
         <div class='w3-row w3-padding-hor-24'>
             <input type='submit' class='w3-border w3-small' value='Save'>
-            <a href='/uptime-checks'><button class='uc-background-none w3-small' type='button'>Cancel</button></a>
+            <a href='/configurations'><button class='uc-background-none w3-small' type='button'>Cancel</button></a>
         </div>
     </form>
 
