fix, legacy context in url; titles

--- a/views/desk.html
+++ b/views/desk.html
@@ -1,7 +1,7 @@
 <@ extends "base.html" @>
 
 <@ block header @>
-    <h3>Uptime - Configurations</h3>
+    <h3>Moodi-Uptime - Configurations</h3>
 <@ endblock @>
 
 <@ block content @>
@@ -29,7 +29,7 @@
     <@ endfor @>
 
     <div class='w3-row w3-padding-hor-24'>
-        <a href='/uptime-checks/create'><button class='w3-border w3-small'>Create Check</button></a>
+        <a href='/configurations/create'><button class='w3-border w3-small'>Add Configuration</button></a>
     </div>
 </div>
 
