--- a/views/desk.html
+++ b/views/desk.html
@@ -16,7 +16,7 @@
     </div>
     <@ for config in configs @>
     <div class='uc-config w3-row uc-padding-hor-10 uc-border-top' id='{{ config._id }}'>
-        <div class='w3-col l1'><a href='/configrations/{{ config._id }}' class='js-config-status'><span class='uc-ion ion-ios-timer-outline <@ if config.active @>w3-text-green js-config-enabled<@ else @>w3-text-red js-config-disabled<@ endif @>'></span></a></div>
+        <div class='w3-col l1'><a href='/configurations/{{ config._id }}' class='js-config-status'><span class='uc-ion ion-ios-timer-outline <@ if config.active @>w3-text-green js-config-enabled<@ else @>w3-text-red js-config-disabled<@ endif @>'></span></a></div>
         <div class='w3-col l4'><b><a href='/configurations/{{ config._id }}'>{{ config.name }}</a></b></div>
         <div class='w3-col l2 js-config-when'><@if config.active @>every {{ config.interval }}s<@ else @>not scheduled<@ endif @></div>
         <div class='w3-col l2 js-config-last-response'>{{ config.last_response }}</div>
